Revert "fix: css priority - text-wrap pretty > white-space pre"
This reverts commit d2a6371b2f2ce5f99410465f69fc9c1f84d01b71.

--- a/responsive.css
+++ b/responsive.css
@@ -67,7 +67,7 @@ header h1 strong {
 .introduction p {
     font-size: 14px;
     /* white-space: initial; */
-    text-wrap: pretty !important;
+    text-wrap: pretty;
 }
 
 .introduction img {
